added button Back to the ItemDetail component

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -27,7 +27,7 @@
 
 .item {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     flex-direction: row;
     align-items: center;
     width: 30%;
@@ -35,6 +35,7 @@
     border: 1px solid;
     border-color: #ff829e;
     border-radius: 50px;
+    background-color: beige;
 }
 
 .media {
